--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,15 @@
 # vim: set foldmethod=marker :
-########################################################################
-# This file is a compilation of some among the most common ignores
-# needed for scientists producing texts in a number of formats (LaTeX,
-# Word, Excel, etc.), PDF files, and working with stuff such as Python
-# and R. As a bonus, there are some standard ignore patterns for Windows
-# and Mac.
 
 # Generated binary files (PDF, Word, etc.) go here {{{1
 ## Book build output
-_book
-assets
-fig
-
-# For when you want to keep downloaded or received files next to your
-# repo without committing them (bc they're usually binaries).
-_share
+_csl
+_site
 
 # Jekyll {{{1
 _site/
 .sass-cache/
 .jekyll-cache/
 .jekyll-metadata
-
-# eBook build output {{{1
-*.epub
-*.mobi
-*.pdf
 
 # LaTeX {{{ 1
 ## Core latex/pdflatex auxiliary files: {{{2
@@ -290,240 +274,3 @@ Backup of *.doc*
 
 # PowerPoint temporary
 ~$*.ppt*
-
-# Node rules: {{{1
-## Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
-
-## Dependency directory
-## Commenting this out is preferred by some people, see
-## https://docs.npmjs.com/misc/faq#should-i-check-my-node_modules-folder-into-git
-node_modules
-
-# Windows {{{1
-# Temporary
-.netrwhist
-*~
-# Auto-generated tag files
-tags
-# Persistent undo
-[._]*.un~
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows shortcuts
-*.lnk
-
-# MacOS {{{1
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-# Python {{{1
-# Byte-compiled / optimized / DLL files {{{2
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions {{{2
-*.so
-
-# Distribution / packaging {{{2
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller {{{2
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports {{{2
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations {{{2
-*.mo
-*.pot
-
-# Django stuff: {{{2
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff: {{{2
-instance/
-.webassets-cache
-
-# Scrapy stuff: {{{2
-.scrapy
-
-# Sphinx documentation {{{2
-docs/_build/
-
-# PyBuilder {{{2
-target/
-
-# Jupyter Notebook {{{2
-.ipynb_checkpoints
-
-# IPython {{{2
-profile_default/
-ipython_config.py
-
-# pyenv {{{2
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow {{{2
-__pypackages__/
-
-# Celery stuff {{{2
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files {{{2
-*.sage.py
-
-# Environments {{{2
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings {{{2
-.spyderproject
-.spyproject
-
-# Rope project settings {{{2
-.ropeproject
-
-# mkdocs documentation {{{2
-/site
-
-# mypy {{{2
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker {{{2
-.pyre/
-
-# pytype static type analyzer {{{2
-.pytype/
-
-# R {{{1
-## History files
-.Rhistory
-.Rapp.history
-
-## Session Data files
-.RData
-
-## User-specific files
-.Ruserdata
-
-## Example code in package build process
-*-Ex.R
-
-## Output files from R CMD build
-/*.tar.gz
-
-## Output files from R CMD check
-/*.Rcheck/
-
-## RStudio files
-.Rproj.user/
-
-## produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-## OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-## knitr and R markdown default cache directories
-*_cache/
-/cache/
-
-## Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-## R Environment Variables
-.Renviron
-
