--- a/_config.yaml
+++ b/_config.yaml
@@ -14,6 +14,7 @@ description: >-
   pitfalls of giving an operative role to historical knowledge are ever
   present.
 baseurl: "/tipo_ecletismo"
+lang: en-GB
 url: "https://dmcpatrimonio.github.io"
 twitter_username: p3palazzo
 github_username:  p3palazzo
