Update remote + automate build

--- a/_config.yaml
+++ b/_config.yaml
@@ -13,7 +13,7 @@ description: >-
   critical and autonomous historiography, although the theoretical
   pitfalls of giving an operative role to historical knowledge are ever
   present.
-baseurl: "/tipo_ecletismo"
+baseurl: "/operative-history"
 lang: en-GB
 url: "https://dmcpatrimonio.github.io"
 twitter_username: p3palazzo
