--- a/_config.yaml
+++ b/_config.yaml
@@ -25,6 +25,7 @@ markdown: Pandoc
 pandoc:
   extensions:
     - defaults: "_spec/html.yaml"
+    - metadata-file: "_metadata.yaml"
     - section-divs
 plugins:
   - jekyll-coffeescript
